Cards/DMC5480/Code/VC6.0/DMC5480.h

typedef unsigned short      WORD;
typedef unsigned long		DWORD;
DMC5480_API DWORD __stdcall d5480_get_config_latch_mode(WORD cardno, WORD* all_enable);
DMC5480_API long __stdcall d5480_get_latch_flag(WORD cardno);
DMC5480_API DWORD __stdcall d5480_reset_latch_flag(WORD cardno);
DMC5480_API long __stdcall d5480_get_counter_flag(WORD cardno);
DMC5480_API DWORD __stdcall d5480_reset_counter_flag(WORD cardno);
DMC5480_API DWORD __stdcall d5480_reset_clear_flag(WORD cardno);
DMC5480_API DWORD __stdcall d5480_triger_chunnel(WORD cardno, WORD num);
DMC5480_API DWORD __stdcall d5480_set_speaker_logic(WORD cardno, WORD logic);
DMC5480_API DWORD __stdcall d5480_get_speaker_logic(WORD cardno, WORD* logic);
DMC5480_API DWORD __stdcall d5480_get_config_latch_mode(WORD cardno, WORD* all_enable);
//软件限位功能
DMC5480_API DWORD __stdcall d5480_config_softlimit(WORD axis,WORD ON_OFF, WORD source_sel,WORD SL_action, long N_limit,long P_limit);
DMC5480_API DWORD __stdcall d5480_get_config_softlimit(WORD axis,WORD* ON_OFF, WORD* source_sel,WORD* SL_action,long* N_limit,long* P_limit);
//连续插补函数
DMC5480_API DWORD  __stdcall d5480_conti_lines(WORD axisNum, WORD *piaxisList,
    long *pPosList, WORD posi_mode);
DMC5480_API DWORD  __stdcall d5480_conti_arc(WORD *axis, long *rel_pos, long *rel_cen, WORD arc_dir,  WORD posi_mode);
DMC5480_API DWORD  __stdcall d5480_conti_restrain_speed(WORD card, double v);
DMC5480_API  DWORD  __stdcall d5480_conti_change_speed_ratio(WORD card, double percent);
DMC5480_API  double    __stdcall d5480_conti_get_current_speed_ratio(WORD card);
DMC5480_API  DWORD  __stdcall d5480_conti_set_mode(WORD card, WORD conti_mode, double conti_vl, double conti_para, double filter);
DMC5480_API  DWORD  __stdcall d5480_conti_get_mode(WORD card, WORD* conti_mode, double* conti_vl, double* conti_para, double* filter);
DMC5480_API DWORD  __stdcall d5480_conti_open_list(WORD axisNum, WORD *piaxisList);
DMC5480_API DWORD  __stdcall d5480_conti_close_list(WORD card);
DMC5480_API DWORD  __stdcall d5480_conti_check_remain_space(WORD card);
DMC5480_API DWORD  __stdcall d5480_conti_decel_stop_list(WORD card);
DMC5480_API DWORD  __stdcall d5480_conti_sudden_stop_list(WORD card);
DMC5480_API DWORD  __stdcall d5480_conti_pause_list(WORD card);
DMC5480_API DWORD  __stdcall d5480_conti_start_list(WORD card);
DMC5480_API long __stdcall d5480_conti_read_current_mark(WORD card);
DMC5480_API DWORD  __stdcall d5480_conti_extern_lines(WORD axisNum, WORD *piaxisListw,
                                               long *pPosList, WORD posi_mode, long imark);
DMC5480_API DWORD  __stdcall d5480_conti_extern_arc(WORD *axis, long *rel_pos, long *rel_cen, WORD arc_dir,WORD posi_mode, long imark);
 
//PC库错误码
enum ERR_CODE_DMC
{
    ERR_NOERR = 0,          //成功      
    ERR_UNKNOWN = 1,
    ERR_PARAERR = 2,    
    
    ERR_TIMEOUT = 3,
    ERR_CONTROLLERBUSY = 4,
    ERR_CONNECT_TOOMANY = 5,    

    ERR_CONTILINE = 6,
    ERR_CANNOT_CONNECTETH = 8,
    ERR_HANDLEERR = 9, 
    ERR_SENDERR = 10, 
    ERR_FIRMWAREERR = 12, //固件文件错误
    ERR_FIRMWAR_MISMATCH = 14, //固件不匹配
    
    ERR_FIRMWARE_INVALID_PARA    = 20,  //固件参数错误
    ERR_FIRMWARE_PARA_ERR    = 20,  //固件参数错误2
    ERR_FIRMWARE_STATE_ERR    = 22, //固件当前状态不允许操作
    ERR_FIRMWARE_LIB_STATE_ERR    = 22, //固件当前状态不允许操作2
    ERR_FIRMWARE_CARD_NOT_SUPPORT    = 24,  //固件不支持的功能 控制器不支持的功能
    ERR_FIRMWARE_LIB_NOTSUPPORT    = 24,    //固件不支持的功能2
};