Cards/DMC5480/Code/C#/DMC5480.cs


        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_latch_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_get_latch_flag(UInt16 cardno);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_reset_latch_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_reset_latch_flag(UInt16 cardno);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_counter_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_get_counter_flag(UInt16 cardno);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_reset_counter_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_reset_counter_flag(UInt16 cardno);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_reset_clear_flag", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_reset_clear_flag(UInt16 cardno);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_triger_chunnel", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_triger_chunnel(UInt16 cardno, UInt16 num);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_set_speaker_logic", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_set_speaker_logic(UInt16 cardno, UInt16 logic);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_speaker_logic", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_speaker_logic(UInt16 cardno, ref UInt16 logic);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_latch_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_latch_mode(UInt16 cardno, ref UInt16 all_enable);

        //Software limit function

        [DllImport("DMC5480.dll", EntryPoint = "d5480_config_softlimit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_config_softlimit(UInt16 axis,UInt16 ON_OFF, UInt16 source_sel,UInt16 SL_action, Int32 N_limit,Int32 P_limit);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_get_config_softlimit", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32  d5480_get_config_softlimit(UInt16 axis,ref UInt16 ON_OFF,ref UInt16 source_sel,ref UInt16 SL_action,ref Int32 N_limit,ref Int32 P_limit);


        //Continuous interpolation function
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_lines", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_lines(UInt16 axisNum, ref UInt16 piaxisList,
            ref Int32 pPosList, UInt16 posi_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_arc", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_arc(ref UInt16 axis, ref Int32 rel_pos, ref Int32 rel_cen, UInt16 arc_dir,  UInt16 posi_mode);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_restrain_speed", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_restrain_speed(UInt16 card, double v);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_change_speed_ratio", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern  UInt32   d5480_conti_change_speed_ratio(UInt16 card, double percent);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_get_current_speed_ratio", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern  double     d5480_conti_get_current_speed_ratio(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_set_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern  UInt32   d5480_conti_set_mode(UInt16 card, UInt16 conti_mode, double conti_vl, double conti_para, double filter);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_get_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern  UInt32   d5480_conti_get_mode(UInt16 card, ref UInt16 conti_mode, ref double conti_vl, ref double conti_para, ref double filter);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_open_list", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_open_list(UInt16 axisNum, ref UInt16 piaxisList);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_close_list", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_close_list(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_check_remain_space", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_check_remain_space(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_decel_stop_list", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_decel_stop_list(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_sudden_stop_list", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_sudden_stop_list(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_pause_list", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_pause_list(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_start_list", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_start_list(UInt16 card);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_read_current_mark", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32  d5480_conti_read_current_mark(UInt16 card);
        
        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_extern_lines", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_extern_lines(UInt16 axisNum, ref UInt16 piaxisListw,
                                                       ref Int32 pPosList, UInt16 posi_mode, Int32 imark);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_extern_arc", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern UInt32   d5480_conti_extern_arc(ref UInt16 axis, ref Int32 rel_pos, ref Int32 rel_cen, UInt16 arc_dir,UInt16 posi_mode, Int32 imark);

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_rel_helix_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern  UInt32   d5480_conti_rel_helix_move(UInt16 card, ref Int32 rel_pos,ref Int32 rel_cen, Int32 height, UInt16 arc_dir, Int32 imark);
        //Absolute spiral interpolation motion function

        [DllImport("DMC5480.dll", EntryPoint = "d5480_conti_helix_move", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern  UInt32   d5480_conti_helix_move(UInt16 card, ref Int32 target_pos,ref Int32 cen_pos,Int32 height, UInt16 arc_dir, Int32 imark);

        //PC library error code
        enum ERR_CODE_DMC
        {
            ERR_NOERR = 0,          //success      
            ERR_UNKNOWN = 1,
            ERR_PARAERR = 2,

            ERR_TIMEOUT = 3,
            ERR_CONTROLLERBUSY = 4,
            ERR_CONNECT_TOOMANY = 5,

            ERR_CONTILINE = 6,
            ERR_CANNOT_CONNECTETH = 8,
            ERR_HANDLEERR = 9,
            ERR_SENDERR = 10,
            ERR_FIRMWAREERR = 12, //Firmware file error
            ERR_FIRMWAR_MISMATCH = 14, //Firmware does not match

            ERR_FIRMWARE_INVALID_PARA = 20,  //Firmware parameter error
            ERR_FIRMWARE_PARA_ERR = 20,  //Firmware parameter error 2
            ERR_FIRMWARE_STATE_ERR = 22, //The current state of the firmware does not allow operation
            ERR_FIRMWARE_LIB_STATE_ERR = 22, //The current state of the firmware does not allow operation 2
            ERR_FIRMWARE_CARD_NOT_SUPPORT = 24,  //Features not supported by the firmware Features not supported by the controller
            ERR_FIRMWARE_LIB_NOTSUPPORT = 24,    //Features not supported by firmware 2
        };

    }
}
